--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ index:
 baseurl: "/" # the subpath of your site, e.g.  #
 #                                                          #
 #DOMINIO DEL SITIO WEB                                     #
-#url: "https://javfr.github.io/"                            #
-url: 192.168.0.37:400
+url: "https://javfr.github.io/"                            #
+#url: 192.168.0.37:400
 #                                                          # 
 # Build settings                                           #
 theme: minima                                              #
